# glamira_user_behavior_pipeline

./: .gitignore  README.md  main.py  pyproject.toml
config/: config.py  connect.py
dbt_pipeline/: dbt_project.yml
dbt_pipeline/models/staging/: source.yml  stg_dim_location.sql  stg_dim_product.sql  stg_fact_sales_order.sql  stg_glamira_raw.sql  stg_ip_location.sql  stg_product_info.sql
dbt_pipeline/models/warehouse/: dim_customer.sql  dim_date.sql  dim_location.sql  dim_product.sql  fact_sales_order.sql  schema.yml
dbt_pipeline/seeds/: exchange_rates.csv
docs/: README.md
etl/extract/: extract_urls.py  product_collection.py
etl/load/: load_data_to_gcs.py  load_data_to_mongodb.py
src/: main.py
src/data/: process_error_product_id.py  process_ip_locations.py  product_collection.py  product_name_collection.py
tests/: test.py
