[project]
name = "glamira-user-behavior-pipeline"
version = "0.1.0"
description = ""
authors = [
    {name = "Bách Trần",email = "maitranbach2812@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]

[tool.poetry]
packages = [{include = "glamira_user_behavior_pipeline", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
