[project]
name = "glamira-user-behavior-pipeline"
version = "0.1.0"
description = ""
authors = [
    {name = "Bách Trần",email = "maitranbach2812@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pymongo (>=4.16.0,<5.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "ip2location (>=8.11.0,<9.0.0)",
    "pandas (>=3.0.1,<4.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "beautifulsoup4 (>=4.14.3,<5.0.0)",
    "tqdm (>=4.67.3,<5.0.0)",
    "aiohttp (>=3.13.3,<4.0.0)"
]

[tool.poetry]
packages = [{include = "glamira_user_behavior_pipeline", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
